Palantir java formatter